--- a/index.html
+++ b/index.html
@@ -516,13 +516,13 @@
 				<button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 			</div>
 			<div class="offcanvas-body">
-				<li class="nav-item"><a href="#section1" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Home</a></li>
-				<li class="nav-item"><a href="#section2" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">About Us</a></li>
-				<li class="nav-item"><a href="#section3" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Highlights</a></li>
-				<li class="nav-item"><a href="#section4" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Amenities</a></li>
-				<li class="nav-item"><a href="#section5" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Price</a></li>
-				<li class="nav-item"><a href="#section6" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Gallery</a></li>
-				<li class="nav-item"><a href="#section7" class="nav-link fw-medium p-2 ps-3 border-2 border-start mb-3">Contact Us</a></li>
+				<li class="nav-item"><a href="#section1" class="nav-link fw-medium w-100 active">Home</a></li>
+				<li class="nav-item"><a href="#section2" class="nav-link fw-medium w-100">About Us</a></li>
+				<li class="nav-item"><a href="#section3" class="nav-link fw-medium w-100">Highlights</a></li>
+				<li class="nav-item"><a href="#section4" class="nav-link fw-medium w-100">Amenities</a></li>
+				<li class="nav-item"><a href="#section5" class="nav-link fw-medium w-100">Price</a></li>
+				<li class="nav-item"><a href="#section6" class="nav-link fw-medium w-100">Gallery</a></li>
+				<li class="nav-item"><a href="#section7" class="nav-link fw-medium w-100">Contact Us</a></li>
 			</div>
 		</div>
 		<script src="./js/jquery.min.js"></script>
