--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- <link rel="stylesheet" href="./css/aos.css" /> -->
+		<link rel="stylesheet" href="./css/aos.css" />
 		<link rel="stylesheet" href="./css/all.min.css" />
 		<link rel="stylesheet" href="./css/hover-min.css" />
 		<link rel="stylesheet" href="./css/animate.min.css" />
@@ -41,7 +41,7 @@
 							</a>
 						</div>
 						<ul class="col-10 d-none d-lg-flex justify-content-end m-0">
-							<li class="nav-item"><a href="#section1" class="nav-link ms-3 ps-3 border-2 border-start-0">Home</a></li>
+							<li class="nav-item"><a href="#section1" class="nav-link active ms-3 ps-3 border-2 border-start-0">Home</a></li>
 							<li class="nav-item"><a href="#section2" class="nav-link ms-3 ps-3 border-2 border-start">About Us</a></li>
 							<li class="nav-item"><a href="#section3" class="nav-link ms-3 ps-3 border-2 border-start">Highlights</a></li>
 							<li class="nav-item"><a href="#section4" class="nav-link ms-3 ps-3 border-2 border-start">Amenities</a></li>
@@ -99,18 +99,18 @@
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti deleniti corporis quod placeat consequuntur fuga architecto quis voluptatem cumque exercitationem, beatae a laborum reiciendis magni. Quasi beatae voluptatum nihil sequi. </p>
 					<div class="listGroup">
 						<ul>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Etiam sed quam sagittis, luctus erat et, condimentum turpis.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Curabitur elementum augue ut felis auctor malesuada.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Vivamus at nisi quis velit feugiat mattis in nec tellus.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Sed lobortis diam non tellus consectetur lacinia in vehicula.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Donec vel est vestibulum, luctus risus tempus, vehicula leo.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Phasellus sagittis orci fringilla eros vehicula interdum.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Sed ut turpis luctus, viverra magna aliquam, rhoncus neque.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Vestibulum non nunc lobortis, lobortis lacus vel, aliquet enim.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Nam eu tellus pharetra, sodales magna sit amet, venenatis purus.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Nullam suscipit dolor vitae risus sollicitudin, vel ultrices erat maximus.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Nunc finibus sapien nec lacus imperdiet, eget eleifend diam.</span></li>
-							<li class="d-grid align-items-center" data-aos="fade-up"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-left" data-aos-delay="50"><span>Etiam sed quam sagittis, luctus erat et, condimentum turpis.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-up" data-aos-delay="50"><span>Curabitur elementum augue ut felis auctor malesuada.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-right" data-aos-delay="50"><span>Vivamus at nisi quis velit feugiat mattis in nec tellus.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-left" data-aos-delay="100"><span>Sed lobortis diam non tellus consectetur lacinia in vehicula.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-up" data-aos-delay="100"><span>Donec vel est vestibulum, luctus risus tempus, vehicula leo.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-right" data-aos-delay="100"><span>Phasellus sagittis orci fringilla eros vehicula interdum.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-left" data-aos-delay="150"><span>Sed ut turpis luctus, viverra magna aliquam, rhoncus neque.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-up" data-aos-delay="150"><span>Vestibulum non nunc lobortis, lobortis lacus vel, aliquet enim.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-right" data-aos-delay="150"><span>Nam eu tellus pharetra, sodales magna sit amet, venenatis purus.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-left" data-aos-delay="200"><span>Nullam suscipit dolor vitae risus sollicitudin, vel ultrices erat maximus.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-up" data-aos-delay="200"><span>Nunc finibus sapien nec lacus imperdiet, eget eleifend diam.</span></li>
+							<li class="d-grid align-items-center" data-aos="fade-right" data-aos-delay="200"><span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></li>
 						</ul>
 					</div>
 				</div>
@@ -465,7 +465,7 @@
 								<a href="#" class="ms-2"><i class="fa-brands fa-google"></i></a>
 							</p>
 							<ul class="footerMenu d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center justify-content-lg-end p-0 row-gap-2">
-								<li class="px-2 ps-lg-0 border-0"><a href="#">Home</a></li>
+								<li class="px-2 ps-lg-0 border-0"><a href="#" class="active">Home</a></li>
 								<li class="px-2 border-0"><a href="#">About Us</a></li>
 								<li class="px-2 border-0"><a href="#">Highlights</a></li>
 								<li class="px-2 border-0"><a href="#">Amenities</a></li>
@@ -528,7 +528,7 @@
 		<script src="./js/jquery.min.js"></script>
 		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/owl.carousel.min.js"></script>
-		<!-- <script src="./js/aos.js"></script> -->
+		<script src="./js/aos.js"></script> 
 		<script src="./js/main.js"></script>
 		<script src="./js/slider.js"></script>
 	</body>
