modal button applied ver 2

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 							<a href="mailto:arohideveloper@gmail.com"
 								class="ps-3 border-2 border-start">arohideveloper@gmail.com</a>
 						</div>
-						<div class="col-3 col-md-6 text-md-end d-flex justify-content-end">
-							<a href="#" class="ms-3" style="font-size: 4rem;"><i class="bi bi-instagram"></i></a>
-							<a href="#" class="ms-3" style="font-size: 4rem;"><i class="bi bi-facebook"></i></a>
-							<a href="#" class="ms-3" style="font-size: 4rem;"><i class="bi bi-google"></i></a>
+						<div class="col-3 col-md-6 text-md-end d-flex gap-3 justify-content-end">
+							<a href="#" target="_blank"><i class="bi bi-instagram" style="font-size: 20px !important;"></i></a>
+							<a href="#" target="_blank"><i class="bi bi-facebook" style="font-size: 20px !important;"></i></a>
+							<a href="#" target="_blank"><i class="bi bi-google" style="font-size: 20px !important;"></i></a>
 						</div>
 					</div>
 				</div>
