--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
 								<img src="./images/2bhk.jpg" alt="" class="rounded">
 								<div class="pt-3 px-2">
 									<h2 class="mb-1 fs-3 fw-bold">2BHK Flat</h2>
-									<p class="my-2"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 10,00,000</strong></p>
+									<p class="my-2 sub-title"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 10,00,000</strong></p>
 									<div class="d-flex mb-0">
-										<p class="mb-1 me-4"><i class="fa-solid fa-bed"></i><span> 2</span></p>
-										<p class="mb-1 me-4"><i class="fa-solid fa-bath"></i><span> 1</span></p>
-										<p class="mb-0 me-4"><i class="fa-solid fa-pen-ruler"></i><span> 400sq</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bed"></i><span> 2</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bath"></i><span> 1</span></p>
+										<p class="mb-0 me-4 para"><i class="fa-solid fa-pen-ruler"></i><span> 400sq</span></p>
 									</div>
 									<button class="button-hover">
 										<span class=""><i class="fa-solid fa-plus text-white"></i></span>
@@ -174,11 +174,11 @@
 								<img src="./images/2bhk.jpg" alt="" class="rounded">
 								<div class="pt-3 px-2">
 									<h2 class="mb-1 fs-3 fw-bold">2BHK Flat</h2>
-									<p class="my-2"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 12,50,000</strong></p>
+									<p class="my-2 sub-title"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 12,50,000</strong></p>
 									<div class="d-flex mb-0">
-										<p class="mb-1 me-4"><i class="fa-solid fa-bed"></i><span> 2</span></p>
-										<p class="mb-1 me-4"><i class="fa-solid fa-bath"></i><span> 2</span></p>
-										<p class="mb-0 me-4"><i class="fa-solid fa-pen-ruler"></i><span> 480sq</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bed"></i><span> 2</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bath"></i><span> 2</span></p>
+										<p class="mb-0 me-4 para"><i class="fa-solid fa-pen-ruler"></i><span> 480sq</span></p>
 									</div>
 									<button class="button-hover">
 										<span class=""><i class="fa-solid fa-plus text-white"></i></span>
@@ -191,11 +191,11 @@
 								<img src="./images/3bhk.jpg" alt="" class="rounded">
 								<div class="pt-3 px-2">
 									<h2 class="mb-1 fs-3 fw-bold">3BHK Flat</h2>
-									<p class="my-2"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 14,00,000</strong></p>
+									<p class="my-2 sub-title"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 14,00,000</strong></p>
 									<div class="d-flex mb-0">
-										<p class="mb-1 me-4"><i class="fa-solid fa-bed"></i><span> 3</span></p>
-										<p class="mb-1 me-4"><i class="fa-solid fa-bath"></i><span> 2</span></p>
-										<p class="mb-0 me-4"><i class="fa-solid fa-pen-ruler"></i><span> 720sq</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bed"></i><span> 3</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bath"></i><span> 2</span></p>
+										<p class="mb-0 me-4 para"><i class="fa-solid fa-pen-ruler"></i><span> 720sq</span></p>
 									</div>
 									<button class="button-hover">
 										<span class=""><i class="fa-solid fa-plus text-white"></i></span>
@@ -208,11 +208,11 @@
 								<img src="./images/3bhk.jpg" alt="" class="rounded">
 								<div class="pt-3 px-2">
 									<h2 class="mb-1 fs-3 fw-bold">3BHK Flat</h2>
-									<p class="my-2"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 15,70,000</strong></p>
+									<p class="my-2 sub-title"><small>Starting</small><strong>&nbsp;<i class="fa-solid fa-indian-rupee-sign"></i> 15,70,000</strong></p>
 									<div class="d-flex mb-0">
-										<p class="mb-1 me-4"><i class="fa-solid fa-bed"></i><span> 3</span></p>
-										<p class="mb-1 me-4"><i class="fa-solid fa-bath"></i><span> 3</span></p>
-										<p class="mb-0 me-4"><i class="fa-solid fa-pen-ruler"></i><span> 820sq</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bed"></i><span> 3</span></p>
+										<p class="mb-1 me-4 para"><i class="fa-solid fa-bath"></i><span> 3</span></p>
+										<p class="mb-0 me-4 para"><i class="fa-solid fa-pen-ruler"></i><span> 820sq</span></p>
 									</div>
 									<button class="button-hover">
 										<span class=""><i class="fa-solid fa-plus text-white"></i></span>
@@ -248,12 +248,12 @@
 				<div class="container py-4 py-md-5 position-relative">
 					<div class="container textBox d-flex align-items-center position-absolute top-50 start-0 translate-middle-y" data-aos="fade-up" data-aos-duration="200">
 						<div class="">
-							<h1 class="title fw-bold z-2 position-relative">The Section Title</h1>
-							<h2 class="fs-3 fw-lighter text-primary z-2 position-relative">The Section Sub Title For Text</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolores exercitationem harum, nesciunt esse ratione
+							<h1 class="title fw-bold z-2 position-relative mb-3" style="color: #fff !important;">The Section Title</h1>
+							<h2 class="sub-title fw-lighter text-primary z-2 position-relative mb-3">The Section Sub Title For Text</h2>
+							<p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolores exercitationem harum, nesciunt esse ratione
 								nam, fuga accusamus quos sapiente minus aliquam architecto fugit quod quaerat? Ipsam odit accusantium obcaecati!
 							</p>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quibusdam optio doloremque deleniti sapiente
+							<p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium quibusdam optio doloremque deleniti sapiente
 								dolore eaque nesciunt vel. </p>
 							<button type="button" class="btn btn-primary px-4"><span>Contact Us</span></button>
 						</div>
