--- a/index.html
+++ b/index.html
@@ -293,12 +293,12 @@
 					sequi.
 				</p>
 				<div class="owl-carousel owl-theme owl-gallery">
-					<div class="item"><img src="/images/img_1.jpg" alt="iage alt text"></div>
-					<div class="item"><img src="/images/img_2.jpg" alt="iage alt text"></div>
-					<div class="item"><img src="/images/img_3.jpg" alt="iage alt text"></div>
-					<div class="item"><img src="/images/img_4.jpg" alt="iage alt text"></div>
-					<div class="item"><img src="/images/img_5.jpg" alt="iage alt text"></div>
-					<div class="item"><img src="/images/img_6.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_1.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_2.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_3.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_4.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_5.jpg" alt="iage alt text"></div>
+					<div class="item"><img src="./images/img_6.jpg" alt="iage alt text"></div>
 				</div>
 			</div>
 		</section>
