--- a/index.html
+++ b/index.html
@@ -432,8 +432,7 @@
 			</div>
 		</footer>
 	</main>
-	<div class="modal fade rounded-0" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
+	<div class="modal fade rounded-0" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog rounded-0">
 			<div class="modal-content rounded-0">
 				<div class="modal-body">
@@ -477,7 +476,7 @@
 	</div>
 	<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
 		<div class="offcanvas-header p-2 shadow">
-			<img src="https://placehold.co/400x200" alt="">
+			<img src="./images/logo_e.png" alt="">
 			<button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
 		<div class="offcanvas-body">
