--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</div>
 				</div>
 			</div>
-			<nav class="container p-0 p-lg-2 py-lg-0 pt-lg-2">
+			<nav class="container p-lg-2 py-lg-0 pt-lg-2">
 				<div class="row align-items-center">
 					<div class="col-4 col-lg-2">
 						<a class="navbar-brand" href="#"><img src="./images/logo_e.png" alt=""></a>
@@ -69,11 +69,11 @@
 		<section class="banner-area" id="bannerArea" data-aos="fade-up">
 			<div class="container-fluid p-0">
 				<div class="owl-carousel owl-theme owl-banner">
-					<div class="item p-0">
+					<div class="item">
 						<div class="container position-relative">
 							<div class="container position-absolute top-100 start-0 translate-middle-y">
 								<div class="text rounded-2 p-3 p-md-4 p-lg-5 shadow">
-									<h1 class="text-dark fs-4 fw-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, voluptate. </h1>
+									<h1 class="text-dark fs-4 fw-bold lh-base">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
 									<p class="text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi veniam obcaecati, commodi nemo assumenda cum! Commodi, perspiciatis numquam, provident minus maxime laboriosam ratione ea repudiandae tempora ullam harum explicabo? Nulla. </p>
 									<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"><span>Enquiry Now</span></button>
 								</div>
@@ -86,10 +86,10 @@
 		<section class="about-area py-0 py-md-2 py-lg-5" id="aboutArea" data-aos="fade">
 			<div class="container py-4 py-md-5">
 				<div class="row align-items-center">
-					<div class="col-12 col-md-12 col-lg-6" data-aos="fade-right">
-						<img src="./images/aboutImg.png" alt="">
+					<div class="col-12 col-md-12 col-lg-6" data-aos="fade-up">
+						<img src="./images/about.jpg" alt="">
 					</div>
-					<div class="col-12 col-md-12 col-lg-6 ps-lg-4 mt-3 mt-lg-0" data-aos="fade-left">
+					<div class="col-12 col-md-12 col-lg-6 ps-lg-4 mt-3 mt-lg-0" data-aos="fade-down">
 						<h1 class="title fw-bold">About Us</h1>
 						<p class="mb-1 mb-md-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus est voluptatum dolorum ipsum iste, vitae quo culpa tempora sint delectus aperiam pariatur deserunt? Cupiditate quo at eos vitae officiis voluptatum. </p>
 						<p class="mb-1 mb-md-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus est voluptatum dolorum ipsum iste, vitae quo culpa tempora sint delectus aperiam pariatur deserunt? Cupiditate quo at eos vitae officiis voluptatum. </p>
@@ -132,28 +132,30 @@
 			<div class="container py-4 py-md-5">
 				<h1 class="title fw-bold z-2 position-relative">Project Amenities</h1>
 				<p class="z-2 position-relative">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti deleniti corporis quod placeat consequuntur fuga architecto quis voluptatem cumque exercitationem, beatae a laborum reiciendis magni. Quasi beatae voluptatum nihil sequi. </p>
-				<ul class="boxData p-0 mt-3">
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Lorem ipsum dolor amet elit.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Etiam tellus vulputate eleifend.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Fusce sed suscipit scelerisque.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Aenean  vestibulum urna.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Praesent pellentesque viverra.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Nam convallis odio ultrices.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Sed in sapien lacinia magna.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Nunc viverra nec metus varius.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Aliquam tempor turpis tempus.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Sed vulputate massa hendrerit.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Pellentesque ultrices aliquam.</span></li>
-					<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Suspendisse posuere auctor.</span></li>
-				</ul>
+				<div class="mt-3 boxData">
+					<ul>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Lorem ipsum dolor amet elit.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Etiam tellus vulputate eleifend.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Fusce sed suscipit scelerisque.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Aenean vestibulum urna.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Praesent pellentesque viverra.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Nam convallis odio ultrices.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Sed in sapien lacinia magna.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Nunc viverra nec metus varius.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Aliquam tempor turpis tempus.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Sed vulputate massa hendrerit.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Pellentesque ultrices aliquam.</span></li>
+						<li class="px-4" data-aos="zoom-in"><span class="boxCircle position-relative"><i class="fa-solid fa-plus"></i></span><span>Suspendisse posuere auctor.</span></li>
+					</ul>
+				</div>
 			</div>
 		</section>
-		<section class="price-area py-0 py-md-2 py-lg-5 position-relative" id="priceArea" data-aos="fade">
+		<section class="price-area py-0 py-md-2 py-lg-5" id="priceArea" data-aos="fade">
 			<div class="container py-4 py-md-5">
 				<h1 class="title fw-bold z-2 position-relative" style="color: #fff !important;">Price Plans</h1>
 				<p class="z-2 position-relative text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti deleniti corporis quod placeat consequuntur fuga architecto quis voluptatem cumque exercitationem, beatae a laborum reiciendis magni. Quasi beatae voluptatum nihil sequi. </p>
-				<div class="row p-0 z-2 position-relative">
-					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-right" data-aos-delay="0">
+				<div class="row z-2 position-relative">
+					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-up" data-aos-delay="0">
 						<div class="priceCard bg-white p-3 rounded position-relative">
 							<img src="./images/2bhk.jpg" alt="" class="rounded">
 							<div class="pt-3 px-2">
@@ -170,7 +172,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-right" data-aos-delay="100">
+					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-up" data-aos-delay="100">
 						<div class="priceCard bg-white p-3 rounded position-relative">
 							<img src="./images/2bhk.jpg" alt="" class="rounded">
 							<div class="pt-3 px-2">
@@ -187,7 +189,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-right" data-aos-delay="200">
+					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-up" data-aos-delay="200">
 						<div class="priceCard bg-white p-3 rounded position-relative">
 							<img src="./images/3bhk.jpg" alt="" class="rounded">
 							<div class="pt-3 px-2">
@@ -204,7 +206,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-right" data-aos-delay="300">
+					<div class="col-12 col-md-6 col-xl-3 p-2" data-aos="fade-up" data-aos-delay="300">
 						<div class="priceCard bg-white p-3 rounded position-relative">
 							<img src="./images/3bhk.jpg" alt="" class="rounded">
 							<div class="pt-3 px-2">
@@ -256,16 +258,16 @@
 		<section class="contact-area py-0 py-md-2 py-lg-5" id="contactArea">
 			<div class="container py-4 py-md-5 mb-5 mb-md-2 mb-lg-0">
 				<div class="row align-items-center mb-5 mb-md-2 mb-lg-0 pb-5 pb-md-3 pb-lg-0">
-					<div class="col-12 col-lg-6" data-aos="fade-right">
+					<div class="col-12 col-lg-6" data-aos="fade-up">
 						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29443.321294553072!2d88.35896047806888!3d22.712805418808074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f89c763ea43ad5%3A0xf675d691761552bc!2sKhardaha%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1740861743574!5m2!1sen!2sin"></iframe>
 					</div>
-					<div class="col-12 col-lg-6 mt-3 mt-lg-0" data-aos="fade-left">
+					<div class="col-12 col-lg-6 mt-3 mt-lg-0" data-aos="fade-down">
 						<h1 class="title fw-bold z-2">Have a Questions?</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae dolores exercitationem harum, nesciunt esse ratione nam, aliquam architecto fugit quod quaerat? </p>
 						<form action="" class="row" onsubmit="return false;">
 							<div class="col-12 mb-3"><input type="text" name="" id="" placeholder="Name" class="border-bottom border-2 p-2 lh-base"></div>
 							<div class="col-12">
-								<div class="row p-0">
+								<div class="row">
 									<div class="col-12 col-md-6 mb-3"><input type="text" name="" id="" placeholder="Mobile" class="border-bottom border-2 p-2 lh-base"></div>
 									<div class="col-12 col-md-6 mb-3"><input type="text" name="" id="" placeholder="Email" class="border-bottom border-2 p-2 lh-base"></div>
 								</div>
@@ -281,7 +283,7 @@
 		</section>
 		<footer class="py-0 py-md-2 py-lg-5 position-relative mt-5" data-aos="fade-up">
 			<div class="contactBox container p-3 p-md-0 position-absolute top-0 start-50 translate-middle">
-				<div class="innerBox p-0 rounded">
+				<div class="innerBox rounded">
 					<div class="row p-2 p-lg-3 w-100 m-0">
 						<div class="col-12 col-md-6 col-lg-4 d-flex align-items-center p-2 p-lg-3">
 							<span class="d-block d-grid rounded"><i class="fa-solid fa-phone-volume"></i></span>
@@ -294,40 +296,38 @@
 							<span class="d-block d-grid rounded"><i class="fa-solid fa-paper-plane"></i></span>
 							<div class="ms-2 px-2">
 								<strong class="text-white">Email:</strong><br />
-								<span><a href="#">example@email.com</a></span>
+								<span><a href="#">arohideveloper@gmail.com</a></span>
 							</div>
 						</div>
 						<div class="col-12 col-md-12 col-lg-4 d-flex align-items-center p-2 p-lg-3">
 							<span class="d-block d-grid rounded"><i class="fa-solid fa-location-dot"></i></span>
 							<div class="ms-2 px-2">
 								<strong class="text-white">Address:</strong><br />
-								<span><a href="#">Queen's Way, Maidan, Kolkata - 700071</a></span>
+								<span><a href="#">Rahara, Khardah(M), G.C. ROAD, 24PGS(N), West Bengal, Pincode : 700118</a></span>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="container px-4 px-md-0 py-4 py-md-5 pb-2 pb-md-2 mt-5 mt-lg-3">
+			<div class="container py-4 py-md-5 pb-2 pb-md-2 mt-5 mt-lg-3">
 				<div class="row align-items-end mt-5 mt-md-2 mt-lg-0 pt-5 pt-md-2 pt-lg-0">
 					<div class="col-12 col-md-12 col-lg-5 pt-5 pt-md-2 pt-lg-0 col-xl-5 text-center text-lg-start">
 						<img src="./images/logo_a.png" alt="" style="max-width: 125px;">
-						<h1 class="fs-3 text-white fw-bold mt-3">Company Name</h1>
+						<h1 class="fs-3 text-white fw-bold mt-3">Arohi Developer</h1>
 						<p class="text-white">Lorem ipsum dolor sit, amet consectetur ipsum dolor adipisicing elit. Ut
 							voluptas sit consequuntur, impedit dolor, voluptas sit consequuntur, eos quasi quas.
 						</p>
 					</div>
 					<div class="col-12 col-md-12 col-lg-7 col-xl-7 text-end">
 						<p class="text-white text-center text-lg-end fs-3 fw-bold mb-3">Connect with us</p>
-						<p
-							class="fw-bold social d-flex align-items-center justify-content-center justify-content-lg-end">
+						<p class="fw-bold social d-flex align-items-center justify-content-center justify-content-lg-end">
 							<a href="#" class="ms-2"><i class="fa-brands fa-facebook-f"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-instagram"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-whatsapp"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-youtube"></i></a>
 							<a href="#" class="ms-2"><i class="fa-brands fa-google"></i></a>
 						</p>
-						<ul
-							class="footerMenu d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center justify-content-lg-end p-0 row-gap-2">
+						<ul class="footerMenu d-flex flex-wrap flex-lg-nowrap align-items-center justify-content-center justify-content-lg-end row-gap-2">
 							<li class="px-2 ps-lg-0 border-0"><a href="#" class="active">Home</a></li>
 							<li class="px-2 border-0"><a href="#">About Us</a></li>
 							<li class="px-2 border-0"><a href="#">Highlights</a></li>
@@ -338,9 +338,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="container py-0">
-					<hr class="border border-1 opacity-75 my-0">
-				</div>
+				<hr class="border border-1 opacity-75 my-0">
 				<div class="row align-items-center justify-content-center justify-content-lg-between my-3 footerBox">
 					<div class="col-12 col-lg-6 mt-0 mt-lg-2">
 						<p class="text-white text-center text-lg-start fw-nnormal">Copyright &copy; 2025 Arohi Developer, Rahara - Khardah. All rights reserved.</p>
@@ -367,7 +365,7 @@
 							<div class="col-12 mb-3"><input type="text" name="" id="" placeholder="Name" class="border-bottom border-2 p-2 lh-base">
 							</div>
 							<div class="col-12">
-								<div class="row p-0">
+								<div class="row">
 									<div class="col-12 col-md-6 mb-3"><input type="text" name="" id="" placeholder="Email" class="border-bottom border-2 p-2 lh-base m-0"></div>
 									<div class="col-12 col-md-6 mb-3"><input type="text" name="" id="" placeholder="Mobile" class="border-bottom border-2 p-2 lh-base m-0">
 									</div>
@@ -398,15 +396,23 @@
 			<button type="button" class="btn-close me-2" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 		</div>
 		<div class="offcanvas-body">
-			<li class="nav-item"><a href="#section1" class="nav-link fw-medium w-100 active">Home</a></li>
-			<li class="nav-item"><a href="#section2" class="nav-link fw-medium w-100">About Us</a></li>
-			<li class="nav-item"><a href="#section3" class="nav-link fw-medium w-100">Highlights</a></li>
-			<li class="nav-item"><a href="#section4" class="nav-link fw-medium w-100">Amenities</a></li>
-			<li class="nav-item"><a href="#section5" class="nav-link fw-medium w-100">Price Plan</a></li>
-			<li class="nav-item"><a href="#section6" class="nav-link fw-medium w-100">Gallery</a></li>
-			<li class="nav-item"><a href="#section7" class="nav-link fw-medium w-100">Contact Us</a></li>
+			<li class="nav-item"><a href="#bannerArea" class="nav-link fw-medium w-100 active">Home</a></li>
+			<li class="nav-item"><a href="#aboutArea" class="nav-link fw-medium w-100">About Us</a></li>
+			<li class="nav-item"><a href="#highlightArea" class="nav-link fw-medium w-100">Highlights</a></li>
+			<li class="nav-item"><a href="#amenitiesArea" class="nav-link fw-medium w-100">Amenities</a></li>
+			<li class="nav-item"><a href="#priceArea" class="nav-link fw-medium w-100">Price Plan</a></li>
+			<li class="nav-item"><a href="#galleryArea" class="nav-link fw-medium w-100">Gallery</a></li>
+			<li class="nav-item"><a href="#contactArea" class="nav-link fw-medium w-100">Contact Us</a></li>
 		</div>
 	</div>
+	<button class="scrollToTop position-fixed text-center p-3 rounded-circle">
+		<svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+			<path
+				style="stroke-linecap: round; stroke-linejoin: round; stroke-width: 1;"
+				d="M17.86,11.54l-5-8.06a1.07,1.07,0,0,0-1.78,0l-5,8.06A1,1,0,0,0,7.34,13L10,12.16V20a1,1,0,0,0,1,1h2a1,1,0,0,0,1-1V12.16l2.66.79A1,1,0,0,0,17.86,11.54Z"
+				id="primary"></path>
+		</svg>
+	</button>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/owl.carousel.min.js"></script>
