--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 							<span class="d-block d-grid rounded"><i class="fa-solid fa-location-dot"></i></span>
 							<div class="ms-2 px-2">
 								<strong class="text-white">Address:</strong><br />
-								<span><a href="#">Rahara, Khardah(M), G.C. ROAD, 24PGS(N), West Bengal, Pincode : 700118</a></span>
+								<span><a href="#">Rahara, Khardah(M), G.C. ROAD, 24PGS(N), West Bengal, 700118</a></span>
 							</div>
 						</div>
 					</div>
@@ -314,9 +314,7 @@
 					<div class="col-12 col-md-12 col-lg-5 pt-5 pt-md-2 pt-lg-0 col-xl-5 text-center text-lg-start">
 						<img src="./images/logo_a.png" alt="" style="max-width: 125px;">
 						<h1 class="fs-3 text-white fw-bold mt-3">Arohi Developer</h1>
-						<p class="text-white">Lorem ipsum dolor sit, amet consectetur ipsum dolor adipisicing elit. Ut
-							voluptas sit consequuntur, impedit dolor, voluptas sit consequuntur, eos quasi quas.
-						</p>
+						<p class="text-white">Lorem ipsum dolor sit, amet consectetur ipsum dolor adipisicing elit. Ut voluptas sit consequuntur, impedit dolor, voluptas sit consequuntur, eos quasi quas.</p>
 					</div>
 					<div class="col-12 col-md-12 col-lg-7 col-xl-7 text-end">
 						<p class="text-white text-center text-lg-end fs-3 fw-bold mb-3">Connect with us</p>
